--- a/Brady.html
+++ b/Brady.html
@@ -10,9 +10,8 @@
 
 <center>
 
-<h1 style="font-family: 'Times New Roman', sans-serif; color: red; font-size: 50px;"><u>Poquito Burritos
-</u> </h1>
-
+<h1><a href="Brady.html" target="_blank" style="font-family: 'Times New Roman', sans-serif; color: red; font-size: 50px;"><u>Poquito Burritos
+</u></a></h1>
 
 
 
