--- a/Aiden.html
+++ b/Aiden.html
@@ -5,9 +5,9 @@
                                 <meta name="viewport" content="width=device-width, initial-scale=1">
                                 <title>Management Team</title>
                 </head>
-                <body style="text-align: center;">
-                                <h1><u>Meet the Management Team</u></h1>
-                                <h2 style="color: dodgerblue; font-family: Impact">Aiden O'Brien: Chief Cleanliness Officer</h2>
+                <body style="text-align: center; color: white;" bgcolor="green">
+                                <h1 style="color: red"><u>Meet the Management Team</u></h1>
+                                <h2 style="color: white; font-family: Impact">Aiden O'Brien: Chief Cleanliness Officer</h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D5603AQE_mr-Wv7WH3g/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1719801162305?e=1747267200&v=beta&t=1ks8G5mO21ZnuVoZg0oKz81VvRJ75Ged-zyk-8X5UdI><br>
                                 <ul style="text-align: left;">
                                                 <li style="font-size: large;"><b>Key Contributions:</b></li>
@@ -25,7 +25,7 @@
                                 </ul>
                                 <hr>
  
-                                <h2 style="color: dodgerblue; font-family: Impact">Brady Schmidt: Head Grill Master</h2>
+                                <h2 style="color: white; font-family: Impact">Brady Schmidt: Head Grill Master</h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D4D03AQGTGy71ZgtYRA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1725297423806?e=1747267200&v=beta&t=TAiPl-2nA14VKuIgZIQAcYn8elBVQjU7EOOsfwDKWWo><br>
                                 <ul style="text-align: left;">
                                                 <li style="font-size: large;"><b>Key Contributions:</b></li>
@@ -43,7 +43,7 @@
                                 </ul>    
                                 <hr>
  
-                                <h2 style="color: dodgerblue; font-family: Impact">Maddie Wachnicki: Sauce Operations Manager </h2>
+                                <h2 style="color: white; font-family: Impact">Maddie Wachnicki: Sauce Operations Manager </h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D4D03AQH2l0VvNSUKtg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1677006787904?e=1747267200&v=beta&t=APmz7CfwV-ZKUofKXOV_jis5hQ06jY0E5OROoHbDMiY><br>
                                 <ul style="text-align: left;">
                                                 <li style="font-size: large;"><b>Key Contributions:</b></li>
@@ -61,7 +61,7 @@
                                 </ul>    
                                 <hr>
  
-                                <h2 style="color: dodgerblue; font-family: Impact">Evan Carmona: Churro Design Expert </h2>
+                                <h2 style="color: white; font-family: Impact">Evan Carmona: Churro Design Expert </h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D5635AQFezZsS43QoRA/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1725039388749?e=1742223600&v=beta&t=PsFI2i2-eWcfeAIzCL_qwG9bf04fgxH9pBOXmdTTC_U><br>
                                 <ul style="text-align: left;">
                                                 <li style="font-size: large;"><b>Key Contributions:</b></li>
@@ -79,9 +79,9 @@
                                 </ul>    
                                 <hr>
  
-                                <h2 style="color: dodgerblue; font-family: Impact">Jaiden Patel: Quality Control Leader </h2>
+                                <h2 style="color: white; font-family: Impact">Jaiden Patel: Quality Control Leader </h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D4E03AQE_bP_ycFZQXA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1706573205133?e=1747267200&v=beta&t=qTKQ3QQJAnUPsweKuwuGmOUBhvinHbjD7yiYTraxjTY><br>
-                                <ul style="text-align: left;">
+                                <ul style="text-align: left; color: white;">
                                                 <li style="font-size: large;"><b>Key Contributions:</b></li>
                                                 <ol>
                                                                 <li><i>Company Products Page Development</i></li>
@@ -97,9 +97,9 @@
                                 </ul>    
                                 <hr>
  
-                                <h2 style="font-family: Trebuchet MS;">Helpful Links</h2>
-                                <p style="font-family: Trebuchet MS;">
-                                                <a href=https://www.google.com>Home Page</a><br>
+                                <h2 style="font-family: Trebuchet MS; color: red;">Helpful Links</h2>
+                                <p style="font-family: Trebuchet MS; color: white;">
+                                                <a href="Brady.html">Brady Page</a><br>
                                                 Learn more about burritos <a href=https://en.wikipedia.org/wiki/Burrito target="_blank">here</a><br>
                                                 Download the team's favorite burrito picture for your screensaver/wallpaper <a href="burrito-pic.JPG.zip" download>here</a><br>
                                                 <a href="mailto: obrie264@purdue.edu" target="_blank">Contact Me</a>
