--- a/Brady.html
+++ b/Brady.html
@@ -23,7 +23,7 @@ height="auto"
  >
 
 <body>
-<p style="font-family: 'Ariel', sans-serif; color: white; font-size: 30px;"> <em>Poquito Burritos</em> is a Mexican food business headquartered in Indianapolis, Indiana. Our business was founded in 2021 by Brady Schmidt, Jaiden Patel, Madeline Wachnicki, <a href="Aiden.html" target="_blank" style="color:white;">Aiden O'Brien</a> and Evan Carmona. We had a dream of putting a twist on traditional Mexican cuisine, and making sure all of Indiana could get a taste. Our unique business proposition is that we sell miniature Mexican food, which is where our name "Poquito Burritos" comes from. It means "Small Burritos" in Spanish. <p>
+<p style="font-family: 'Ariel', sans-serif; color: white; font-size: 30px;"> <em>Poquito Burritos</em> is a Mexican food business headquartered in Indianapolis, Indiana. Our business was founded in 2021 by Brady Schmidt, Jaiden Patel, Madeline Wachnicki, Aiden O'Brien and Evan Carmona. We had a dream of putting a twist on traditional Mexican cuisine, and making sure all of Indiana could get a taste. Our unique business proposition is that we sell miniature Mexican food, which is where our name "Poquito Burritos" comes from. It means "Small Burritos" in Spanish. <p>
 
 </body>
 
