--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <frameset rows="20%,20%,20%,20%,20%">
     <frame src="Brady.html">
     <frame src="Aiden.html">
-    <frame src="frame3.html">
+    <frame src="Jaiden.html">
     <frame src="frame4.html">
     <frame src="frame5.html">
 </frameset>
