--- a/Aiden.html
+++ b/Aiden.html
@@ -6,7 +6,7 @@
                                 <title>Management Team</title>
                 </head>
                 <body style="text-align: center; color: white;" bgcolor="green">
-                                <h1><a href="Aiden.html" target="_blank" style=color: red; font-size: 50px;"><u>Meet the Management Team</u></a></h1>
+                                <h1><a href="Aiden.html" target="_blank" style="color: red; font-size: 50px;"><u>Meet the Management Team</u></a></h1>
                                 <h2 style="color: white; font-family: Impact">Aiden O'Brien: Chief Cleanliness Officer</h2>
                                 <img src=https://media.licdn.com/dms/image/v2/D5603AQE_mr-Wv7WH3g/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1719801162305?e=1747267200&v=beta&t=1ks8G5mO21ZnuVoZg0oKz81VvRJ75Ged-zyk-8X5UdI><br>
                                 <ul style="text-align: left;">
