--- a/Aiden.html
+++ b/Aiden.html
@@ -101,7 +101,7 @@
                                 <p style="font-family: Trebuchet MS; color: white;">
                                                 <br>
                                                 Learn more about burritos <a href=https://en.wikipedia.org/wiki/Burrito target="_blank">here</a><br>
-                                                Download the team's favorite burrito picture for your screensaver/wallpaper <a href="burrito-pic.JPG.zip" download>here</a><br>
+                                                Download the team's favorite burrito picture for your screensaver/wallpaper <a href="burrito-pic.jpeg" download>here</a><br>
                                                 <a href="mailto: obrie264@purdue.edu" target="_blank">Contact Me</a>
                                 </p>
                 </body>
