--- a/Jaiden.html
+++ b/Jaiden.html
@@ -8,11 +8,11 @@
 <body bgcolor="green">
 
 
-<h1><font size="7">Our Menu</h1></font>
+<h1 style= color: white;><font size="7">Our Menu</h1></font>
 <p style="font-family: Tangerine; color: red; font-size: 34px;"><b><i> Specialties</b></i></p>
 
 
-<ol>
+<ol style= color: white;>
 
 <li><b><u><font size = "5">Poquito Burrito    ... &dollar;3.50*</b></u></li></font>
 <!--This is our specialty item -->
@@ -46,7 +46,7 @@
 
 </ol>
 
-<ul><b><u><font size = "4">Your Choice of Meat</b></u></font>
+<ul style= color: white;><b><u><font size = "4">Your Choice of Meat</b></u></font>
 <li>Steak</li>
 <li>Chicken</li>
 <li>Pork</li>
@@ -55,8 +55,8 @@
 </ul>
 
 
-<p style="font-family: Tangerine; color: red; font-size: 34px;"><b><i>Drinks</b></i></p>
-<ul>
+<p style="font-family: Tangerine; color: white; font-size: 34px;"><b><i>Drinks</b></i></p>
+<ul style= color: white;>
 <li><font size = "4"><i>MMM</i> (Mini Mocktail Margarita) ... <b>$3.50</li></b>
 <li>Mexican Coke ... <b>$3.00</b></li>
 <li><a href="https://jarritos.com/flavor/" target="_blank">Jarritos</a> ... <b>$3.00</b></li>
