--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <frame src="Brady.html">
     <frame src="Aiden.html">
     <frame src="Jaiden.html">
-    <frame src="frame4.html">
+    <frame src="Maddie.html">
     <frame src="frame5.html">
 </frameset>
 </html>
