--- a/Maddie.html
+++ b/Maddie.html
@@ -139,7 +139,7 @@ padding: 10px;
 <h1>
 <img src="partytable.jpeg" alt="Sombrero">
 Welcome to Poquito Burritos!
-<img src="burrito.jpeg" alt="Piñata">
+<img src="taco.jpeg" alt="Piñata">
 </h1>
 
 <div class="banner">
