--- a/Maddie.html
+++ b/Maddie.html
@@ -10,8 +10,8 @@
 <style>
 body {
 font-family: Arial, sans-serif;
-background: linear-gradient(to bottom, #3A3F87, #3A3F87);
-color: #4f0030;
+background: linear-gradient(to bottom, #29c947, #29c947);
+color: #FFF9D1;
 margin: 0;
 padding: 0;
 display: flex;
@@ -47,7 +47,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for a professional look */
 }
 
 .banner {
-background-color: #CF3E81; /* Deep purple */
+background-color: #cf3e3e; /* Deep purple */
 padding: 30px 15px; /* Larger padding for bigger banners */
 margin: 20px auto;
 max-width: 900px;
@@ -74,7 +74,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .section-banner {
-background-color: #5DC7A4; /* Festive yellow */
+background-color: #cf3e3e; /* Festive yellow */
 padding: 10px 20px;
 margin: 20px auto;
 max-width: 900px;
@@ -85,7 +85,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
 .section-banner p, .section-banner h2 {
 margin: 0;
-color: #4f0030; /* Deep festive color */
+color: #FFF9D1; /* Deep festive color */
 font-weight: bold;
 }
 
@@ -106,7 +106,7 @@ margin-top: 20px;
 }
 
 .links a {
-background-color: #CF3E81; /* Festive green */
+background-color: #cf3e3e; /* Festive green */
 padding: 10px 20px;
 margin: 10px;
 border-radius: 10px;
@@ -139,7 +139,7 @@ padding: 10px;
 <h1>
 <img src="partytable.jpeg" alt="Sombrero">
 Welcome to Poquito Burritos!
-<img src="taco.jpeg" alt="Piñata">
+<img src="burrito.jpeg" alt="Piñata">
 </h1>
 
 <div class="banner">
