--- a/Maddie.html
+++ b/Maddie.html
@@ -176,7 +176,7 @@ We thank you for your continuous support.
 <div class="links">
 <a href="https://en.wikipedia.org/wiki/Burrito" target="_blank">Learn more about burritos</a>
 <a href="mailto:mwachnic@purdue.edu">Contact Me</a>
-<a href="party.jpeg" download>Download Our Menu</a>
+<a href="party.jpeg" download>Check out one of our Quinceañeras!</a>
 </div>
 
 <footer>
