--- a/Maddie.html
+++ b/Maddie.html
@@ -138,7 +138,7 @@ padding: 10px;
 <div id="page-content">
 <h1>
 <img src="partytable.jpeg" alt="Sombrero">
-<a href="Maddie.html" target="_blank">Welcome to Poquito Burritos!</a>
+<a href="Maddie.html" target="_blank" style="color: red;">Welcome to Poquito Burritos!</a>
 <img src="burrito.jpeg" alt="Piñata">
 </h1>
 
