--- a/Jaiden.html
+++ b/Jaiden.html
@@ -67,7 +67,7 @@
 
 <font size="2">*Additional charges may apply</font><br>
 <br>
-<a href = "Menu.png" download="Poquito Burrito Menu">Download PDF</a></font>
+<a href = "Menu.png" download="Poquito Burrito Menu">Download our Lunch Menu</a></font>
 <br>
 <br>
 <font size="5"><a href="mailto:pate1688@purdue.edu">Contact Us!</a></font>
