--- a/Jaiden.html
+++ b/Jaiden.html
@@ -8,7 +8,7 @@
 <body bgcolor="green">
 
 
-<h1 style= color: white;><font size="7">Our Menu</h1></font>
+<h1 style= color: white;><center><font size="7">Our Menu</h1></font></center></h1>
 <p style="font-family: Tangerine; color: red; font-size: 34px;"><b><i> Specialties</b></i></p>
 
 
