--- a/Brady.html
+++ b/Brady.html
@@ -43,7 +43,7 @@ height="auto"
 
 However, our most famous delicacy is the world-renowned <b>poquito churro.</b>
 
- We mainly reach our buyers from a <a href="https://www.shopify.com/blog/what-is-direct-to-consumer" target="_blank" style="color: white;">DTC</a> approach that allows us to interact with our consumers face-to-face and build valuable connections. We mainly carry this out through our central location - <a href="garage.jpeg" download target="_blank" style="color: white;">The Garage Food Hall</a>, in Indianapolis. Along with our standstill location, we have 5 food trucks that scatter across Indiana daily to various cities and universities and get our product out to the public. The 5 most popular cities our food trucks visit are: 
+ We mainly reach our buyers from a <a href="https://www.shopify.com/blog/what-is-direct-to-consumer" target="_blank" style="color: white;">DTC</a> approach that allows us to interact with our consumers face-to-face and build valuable connections. We mainly carry this out through our central location - <a href="Garage.jpeg" download target="_blank" style="color: white;">The Garage Food Hall</a>, in Indianapolis. Along with our standstill location, we have 5 food trucks that scatter across Indiana daily to various cities and universities and get our product out to the public. The 5 most popular cities our food trucks visit are: 
 
 <ol style="text-align: left;">
 <li>Indianapolis</li>
