--- a/Jaiden.html
+++ b/Jaiden.html
@@ -66,7 +66,7 @@
 
 
 <font size="2">*Additional charges may apply</font>
-<a href ="menu.png" download="Poquito Burrito Menu">Download our Lunch Menu</a>
+<a href ="menu.png" download="Poquito Burrito Menu">Download our Lunch Menu!</a>
 <font size="5"><a href="mailto:pate1688@purdue.edu">Contact Us!</a></font>
 
 
