--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <frame src="Aiden.html">
     <frame src="Jaiden.html">
     <frame src="Maddie.html">
-    <frame src="frame5.html">
+    <frame src="Evan.html">
 </frameset>
 </html>
