--- a/Evan.html
+++ b/Evan.html
@@ -19,7 +19,13 @@
 </head>
 <body>
 
-    <h1>Welcome to Poquito Burritos!</h1>
+<center>
+
+<h1><a href="Evan.html" target="_blank" style="color: red; font-size: 50px;"><u>Poquito Burritos
+</u></a></h1>
+</center>
+    
+
     <p>Bringing delicious food to the streets of Indianapolis with quality ingredients and bold flavors.</p>
 
     <hr>
