--- a/Evan.html
+++ b/Evan.html
@@ -36,15 +36,15 @@
     <p>Find us at different locations throughout the week! Follow our <a href="#">social media</a> for live updates.</p>
     <p>Daily Hours: 11 a.m - 11 p.m.</p>
 
-    <img src="https://lh3.googleusercontent.com/gg-dl/AA8i_VJcSF-JFLZv0XGnCHqWW0KrPVUrQb8-B7TZZVps0dBJ-ByIBtb7YjOzwyRgROr6ciewPHGMbn57M-ATJC6OWHxCp55PGjmpm5a7Xe2IaLJu1acjHl14fDnc8o4CxZyv6p7ovfjh_57LJW_05vZm_t5ocKasgX3nXnmglWObkhT5_-MDQg" alt="Food Truck on the Street" width="300">
+    <img src="foodtruckstreet.png" alt="Food Truck on the Street" width="300">
 
     <h3>Catering Services</h3>
     <p>We cater private events, weddings, and corporate gatherings. Contact us for a customized menu!</p>
-    <img src="https://lh3.googleusercontent.com/gg-dl/AA8i_VJfppIZePzdjtYn4oAwFqJYE1NpL_lBfejkyLQp67ChDE-UYmvBBuy2A8Y-0xIu7GuzX9pE4RwJNn3Q6FHssxvWpw-2RZLvmzwB3rYZybYer6qxIQNGhDJAcd3jK9HPCAdZnKPj6s6BbAPu9YEjJDVaxAB-PVnRxlXQ3s5_8kydVafK" alt="Food Truck Catering Event" width="300">
+    <img src="catering.png" alt="Food Truck Catering Event" width="300">
 
     <h3>Event Participation</h3>
     <p>Look for us at festivals, farmers markets, and special community events.</p>
-    <img src="https://lh3.googleusercontent.com/gg-dl/AA8i_VJCySqCNiROq1Ywy2xT9vg60aDiD7tddCV32zNOW0mMCzACmL-V0DjrHuCF4SjNI9kX0klNveaoCnNWwHtUI1pQahgDet6ocBWYfIRGefp4-ddnZhxGbkqCse-djTZuqWAzRAMm16fF3-nUgM2LXnAOwuZGMRnm2d6p0WLqtd8as06IyA" alt="Food Truck at a Festival" width="300">
+    <img src="foodtruck.png" alt="Food Truck at a Festival" width="300">
 
     <hr>
 
