--- a/Evan.html
+++ b/Evan.html
@@ -40,7 +40,7 @@
 
     <h3>Catering Services</h3>
     <p>We cater private events, weddings, and corporate gatherings. Contact us for a customized menu!</p>
-    <img src="catering.png" alt="Food Truck Catering Event" width="300">
+   <a href="catering.png" download>Download to see what a catering experience could look like!</a>
 
     <h3>Event Participation</h3>
     <p>Look for us at festivals, farmers markets, and special community events.</p>
